--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Hej </p>
-    <p>test test test test</p>
+    <div id="bildspel"></div>
 </body>
 </html>
