--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 <body>
     <div id="bildspel"></div>
-    <div>
-        <h1 id='menu'>Meny</h1>
+    <div class="grad">
+        <h1 id='menu' >Meny</h1>
     </div>
 </body>
 </html>
