--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <body>
     <div id="bildspel"></div>
     <div class="grad">
-        <h1 id='menu' >Meny</h1>
+        <h1 id='menu' >Meny <img src="pil.png" alt="" class="pilmenu" /> </h1>
+        
     </div>
 </body>
 </html>
