--- a/presentation.html
+++ b/presentation.html
@@ -10,6 +10,18 @@
     <title>Document</title>
 </head>
 <body>
+    <div>
+        <h1>Gruppmedlemmar</h1>
+        <ul>
+            <li>Jonathan Gabrielsson</li>
+            <li>Amanda Mathisen</li>
+            <li>Vilma Ottner</li>
+        </ul>
+    </div>
+    <div>
+        <h2>Kompetens och erfarenhet</h2>
+        <p>Vi är en extremt bra grupp med massor av erfarenhet</p>
+    </div>
     
 </body>
 </html>
