--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
 
     <div class="grad">
         <h1 id='menu' >Meny <img src="pil.png" alt="" class="pilmenu" /> </h1>
+        <a href="presentation.html"> Presentationssida </a>
+    </div>
+    <div>
+        <p>Välkommen till vår hemsida</p>
+    </div>
         
     </div>
     <script src="index.js"></script>
