--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
     <div id="bilder">
-        <button id="test">test</button>
+        <button id="nextImage">Nästa bild</button>
         <img class="bildspel" id="bild1" src="" alt=""> <img class="bildspel" id="bild2" src="" alt="">
          <img class="bildspel" id="bild3" src="" alt=""> <img class="bildspel" id="bild4" src="" alt="">
     </div>
