--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
          <img class="bildspel" id="bild3" src="" alt=""> <img class="bildspel" id="bild4" src="" alt="">
     </div>
 
-    <div class="grad">
-        <h1 id='menu' >Meny <img src="pil.png" alt="" class="pilmenu" /> </h1>
+    <div id="test" class="grad">
+        <h1 id='menu' >Meny <img src="pil.png" alt="" class="pilmenu" /> </h1>   
+    </div>
+    <div id="myLinks" class="show"> 
         <a href="presentation.html"> Presentationssida </a>
     </div>
     <div>
