--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
          <img class="bildspel" id="bild3" src="" alt=""> <img class="bildspel" id="bild4" src="" alt="">
     </div>
 
-    <div class="grad">
+    <div id="meny" class="grad">
         <h1 id='menu' >Meny <img src="pil.png" alt="" class="pilmenu" /> </h1>
-        <a href="presentation.html"> Presentationssida </a>
+        <a id="link" href="presentation.html"> Presentationssida </a>
     </div>
     <div>
         <p>Välkommen till vår hemsida</p>
