--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 
     </div>
     <div>
-        <p>Välkommen till vår hemsida</p>
+        <p id="welcome">Välkommen till vår hemsida!
+            Här kommer vi berätta mer om oss själva och vår kompetens</p>
     </div>
         
     </div>
