--- a/index.html
+++ b/index.html
@@ -16,17 +16,13 @@
          <img class="bildspel" id="bild3" src="" alt=""> <img class="bildspel" id="bild4" src="" alt="">
     </div>
 
-    <div id="test" class="grad">
-        <h1 id='menu' >Meny <img src="pil.png" alt="" class="pilmenu" /> </h1>   
-    </div>
-    <div id="myLinks" class="show"> 
-        <a href="presentation.html"> Presentationssida </a>
-
+    <div id="meny" class="grad">
+        <h1 id='menu' >Meny <img src="pil.png" alt="" class="pilmenu" /> </h1>
+        <a id="link" href="presentation.html"> Presentationssida </a>
     </div>
     <div>
         <p>Välkommen till vår hemsida</p>
-    </div>
-        
+    </div>   
     </div>
     <script src="index.js"></script>
 </body>
