--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
         <h1 id='menu' >Meny <img src="pil.png" alt="" class="pilmenu" /> </h1>   
     </div>
     <div id="myLinks" class="show"> 
-        <a href="presentation.html"> Presentationssida </a>
+        <ul>
+            <li><a href="presentation.html"> Presentationssida </a></li>
+            <li><a href=""> Kontakt </a></li>
+        
+    </ul>
     </div>
     <div>
         <p>Välkommen till vår hemsida</p>
