--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <ul>
             <li><a href="presentation.html"> Presentationssida </a></li>
             <li><a href=""> Kontakt </a></li>
+            <li><a href=""> Om oss </a></li>
         
     </ul>
     </div>
