--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
         
     </ul>
     </div>
-    <div>
-        <p>Välkommen till vår hemsida</p>
+    <div id="text">
+        <h2>VÄLKOMMEN HIT</h2>
+        <p>Välkommen till vår hemsida, här kan ni läsa allt om vårt projekt</p>
     </div>
         
     </div>
