--- a/Amanda.html
+++ b/Amanda.html
@@ -10,6 +10,11 @@
     <title>Amandas sida</title>
 </head>
 <body>
+    <div id="rubrik">
+        <H1>Amanda Mathisen</H1>
+        <img src="amanda.jpg">
+        <p>Hej jag heter Amanda </p>
+    </div>
     
 </body>
 </html>
