--- a/presentation.html
+++ b/presentation.html
@@ -10,18 +10,29 @@
     <title>Document</title>
 </head>
 <body>
-    <div>
-        <h1>Gruppmedlemmar</h1>
-        <ul>
-            <li>Jonathan Gabrielsson</li>
-            <li>Amanda Mathisen</li>
-            <li>Vilma Ottner</li>
-        </ul>
+    <div class="presentation">
+        <div>
+            <h1>Grupp 26</h1>
+            <h4>Består av:</h4>
+            <p><a id= "presentation" href="Amanda.html"> Amanda Mathisen </a></p>
+            <p>Vilma Ottner</p>
+            <p>Jonathan fucking åmål Gabrielsson</p>
+        </div>
+        <div>
+            <h2>Vilka är vi?</h2>
+            <p>Vi är ett gäng glada systemvetare som kommer från tre olika städer.
+                Jonte är från fucking åmål, Vilma från fina Örebro och Amanda från sveriges fulaste stad Borlänge.
+            </p>
+        </div>
+        <div>
+            <h2>Kompetens och erfarenhet</h2>
+            <p>Vi är en extremt bra grupp med massor av erfarenhet</p>
+        </div>
+        <div>
+            <img src="" alt="">
+        </div>
     </div>
-    <div>
-        <h2>Kompetens och erfarenhet</h2>
-        <p>Vi är en extremt bra grupp med massor av erfarenhet</p>
-    </div>
+   
     
 </body>
 </html>
