--- a/index.html
+++ b/index.html
@@ -31,8 +31,18 @@
         <h2>VÄLKOMMEN HIT</h2>
         <p>Välkommen till vår hemsida, här kan ni läsa allt om vårt projekt</p>
     </div>
-        
+    <div id="kontakt">
+        <label for="namn">Ditt namn:</label>
+        <input type="name" id="namn" name="namn">
+        <label for="tele">Ditt telefonnummer</label>
+        <input id="tele" type="tel" name="telefonnmr">
+        <label for="email">Din email:</label>
+        <input type="email" id="email" name="mail">
+        <label for="textfield">Ditt meddelande:</label>
+        <input type="text" id="textfield" name="texten">
+
     </div>
+    
     <script src="index.js"></script>
 </body>
 </html>
