--- a/presentation.html
+++ b/presentation.html
@@ -29,7 +29,7 @@
             <p>Vi är en extremt bra grupp med massor av erfarenhet</p>
         </div>
         <div>
-            <img src="" alt="">
+            <img src="images/1.jpg" alt="">
         </div>
     </div>
    
