--- a/presentation.html
+++ b/presentation.html
@@ -15,8 +15,8 @@
             <h1>Grupp 26</h1>
             <h4>Består av:</h4>
             <p><a id= "presentation" href="Amanda.html"> Amanda Mathisen </a></p>
-            <p>Vilma Ottner</p>
-            <p>Jonathan fucking åmål Gabrielsson</p>
+            <p><a id= "presentation" href=""> Vilma Ottner </a></p>
+            <p><a id= "presentation" href=""> Jonathan fucking åmål Gabrielsson </a></p>
         </div>
         <div>
             <h2>Vilka är vi?</h2>
