--- a/index.html
+++ b/index.html
@@ -32,15 +32,16 @@
         <p>Välkommen till vår hemsida, här kan ni läsa allt om vårt projekt</p>
     </div>
     <div id="kontakt">
-        <label for="namn">Ditt namn:</label>
-        <input type="name" id="namn" name="namn">
-        <label for="tele">Ditt telefonnummer</label>
-        <input id="tele" type="tel" name="telefonnmr">
-        <label for="email">Din email:</label>
-        <input type="email" id="email" name="mail">
-        <label for="textfield">Ditt meddelande:</label>
-        <input type="text" id="textfield" name="texten">
-
+        <form action="/index.html" method="GET">
+        <label for="namn">Ditt namn:</label> <br>
+        <input type="text" id="namn" name="namn"> <br>
+        <label for="tele">Ditt telefonnummer</label> <br>
+        <input id="tele" type="tel" name="telefonnmr"> <br>
+        <label for="email">Din email:</label> <br> 
+        <input type="email" id="email" name="mail"> <br> 
+        <label for="textfield">Ditt meddelande:</label> <br> 
+        <textarea name="textarea" id="textfield" cols="30" rows="10"></textarea> <input type="submit" id="submit" name="knapp" value="Skicka"> 
+    </form>
     </div>
     
     <script src="index.js"></script>
