--- a/presentation.html
+++ b/presentation.html
@@ -14,9 +14,9 @@
         <div>
             <h1>Grupp 26</h1>
             <h4>Består av:</h4>
-            <p><a id= "presentation" href="Amanda.html"> Amanda Mathisen </a></p>
-            <p><a id= "presentation" href=""> Vilma Ottner </a></p>
-            <p><a id= "presentation" href=""> Jonathan fucking åmål Gabrielsson </a></p>
+            <p><a class= "animate" href="Amanda.html"> Amanda Mathisen </a></p>
+            <p><a class= "animate" href="Vilma.html"> Vilma Ottner </a></p>
+            <p><a class= "animate" href="Jonte.html"> Jonathan fucking åmål Gabrielsson </a></p> <img id='hej' src="/images/1.jpg" alt="">
         </div>
         <div>
             <h2>Vilka är vi?</h2>
