--- a/Vilma.html
+++ b/Vilma.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" href="style.css">
+
     <title>Document</title>
 </head>
 
@@ -54,6 +55,7 @@
         <div id="vstapel5"> <h4 class="tabelltext" >The sims</h4></div>
 
     </div>
+    <script src="index.js"></script>
 
 </body>
 
