--- a/portfolio.html
+++ b/portfolio.html
@@ -11,6 +11,7 @@
     <div class="presentation">
     <div >
     <H1>Portfolio:Vad har vi med oss i bagaget?</H1>
+    <img id="bagage" src="/images/portfölj.png" alt="En tecknad man som bär på en resväska">
     </div>
     <Div>
         <H2>Java projektet - Men in black</H2>
