--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <div id="myLinks" class="show" > 
         <ul>
             <li><a href="presentation.html"> Presentationssida </a></li>
+            <li><a href="portfolio.html"> Portfolio </a></li>
             <li><a href=""> Kontakt </a></li>
             <li><a href=""> Om oss </a></li>
         
