--- a/Amanda.html
+++ b/Amanda.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Amandas sida</title>
 </head>
-<body>
+<body  class="grad2">
     <div id="rubrik">
         <H1>Amanda Mathisen</H1>
         <img src="amanda.jpg">
