--- a/Vilma.html
+++ b/Vilma.html
@@ -10,7 +10,7 @@
     <title>Document</title>
 </head>
 
-<body>
+<body  class="grad2">
     <div id="vmenu" class="grad">
 
     <h1 id="vnamn"> Vilma Ottner </h1>
