--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Portfolio</title>
 </head>
-<body>
+<body  class="grad2">
     <div class="presentation">
     <div >
     <H1>Portfolio:Vad har vi med oss i bagaget?</H1>
