--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
-<body>
+<body class="grad2">
 
     <div id="bilder">
         <button id="nextImage">Nästa bild</button>
