--- a/presentation.html
+++ b/presentation.html
@@ -9,14 +9,14 @@
     <script src="index.js"></script>
     <title>Document</title>
 </head>
-<body>
+<body  class="grad2">
     <div class="presentation">
         <div>
             <h1>Grupp 26</h1>
             <h4>Består av:</h4>
             <p><a class= "animate" href="Amanda.html"> Amanda Mathisen </a></p>
             <p><a class= "animate" href="Vilma.html"> Vilma Ottner </a></p>
-            <p><a class= "animate" href="Jonte.html"> Jonathan fucking åmål Gabrielsson </a></p> <img id='hej' src="/images/1.jpg" alt="">
+            <p><a class= "animate" href="Jonte.html"> Jonathan fucking åmål Gabrielsson </a></p> <img id='hej' src="images/1.jpg" alt="">
         </div>
         <div>
             <h2>Vilka är vi?</h2>
