--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
     <div id="kontakt">
         <form action="/index.html" method="GET">
         <label for="namn">Ditt namn:</label> <br>
-        <input type="text" id="namn" name="namn"> <br>
-        <label for="tele">Ditt telefonnummer</label> <br>
-        <input id="tele" type="tel" name="telefonnmr"> <br>
+        <input type="text" id="namn" name="namn" class="inputs"> <br>
+        <label for="tele">Ditt telefonnummer:</label> <br>
+        <input id="tele" type="tel" name="telefonnmr" class="inputs"> <br>
         <label for="email">Din email:</label> <br> 
-        <input type="email" id="email" name="mail"> <br> 
+        <input type="email" id="email" name="mail" class="inputs"> <br> 
         <label for="textfield">Ditt meddelande:</label> <br> 
-        <textarea name="textarea" id="textfield" cols="30" rows="10"></textarea> <input type="submit" id="submit" name="knapp" value="Skicka"> 
+        <textarea name="textarea" id="textfield" cols="30" rows="10" class="inputs"></textarea> <input type="submit" id="submit" name="knapp" value="Skicka"> 
     </form>
     </div>
     <script src="index.js"></script>
