--- a/index.html
+++ b/index.html
@@ -57,8 +57,29 @@
             Här kommer Piff och Puff
             Varje gång nu
             Här kommer Piff och Puff!</p>
+
+         <p>Snälla och rara,
+            Helt underbara
+            Och deras saga berättas igen,
+            Hörs deras sånger som för många gånger,
+            Djupt in i skogen där lever dom än
+            Hipp hurra
+            För här kommer Bumbibjörnarna
+            Studsar fram igenom sagorna
+            Och vi får följa med
+            Bumbibärsaften,
+            Den magiska kraften
+            Och visst blir man stark om man dricker utav den
+            Onskan och törnar, det klarar små björnar
+            De kämpar och godheten segrar igen
+            Hipp hurra
+            För här kommer Bumbibjörnarna
+            Studsar fram igenom sagorna
+            Och vi får följa med
+            Och vi får följa med!</p>
     </div>
     <div id="kontakt">
+        <h4 id="meddrubrik">Skicka ett meddelande till oss</h4>
         <form action="/index.html" method="GET">
         <label for="namn">Ditt namn:</label> <br>
         <input type="text" id="namn" name="namn"> <br>
