--- a/Amanda.html
+++ b/Amanda.html
@@ -11,6 +11,7 @@
 </head>
 <body  class="grad2">
     <div id="rubrik">
+        <div id="vmenu" class="grad"></div>
         <H1 id="vnamn">Amanda Mathisen</H1>
     </div>
     <div id="test" class="grad">
