--- a/Vilma.html
+++ b/Vilma.html
@@ -11,11 +11,13 @@
 </head>
 
 <body  class="grad2">
-    <div id="vmenu" class="grad">
-
-    <h1 id="vnamn"> Vilma Ottner </h1>
-
+    <div id="bilder">
+        <button id="nextImage">Starta bildspel</button>
+        <img class="bildspel" id="bild1" src="" alt=""> <img class="bildspel" id="bild2" src="" alt="">
+         <img class="bildspel" id="bild3" src="" alt=""> <img class="bildspel" id="bild4" src="" alt="">
     </div>
+
+    
 
     <div id="test" class="grad">
         <h1 id='menu' >Meny <img src="pil.png" alt="" class="pilmenu" /> </h1>   
@@ -28,7 +30,7 @@
         
     </ul>
     </div>
-
+    <h1>Vilma Ottner</h1>
     <div id="vpre">
         <img  src="mv.jpg" alt="vilmas babypic" id="vilmabild">
         <p id="vptext">
