--- a/portfolio.html
+++ b/portfolio.html
@@ -8,6 +8,25 @@
     <title>Portfolio</title>
 </head>
 <body  class="grad2">
+    <div id="bilder">
+        <button id="nextImage">Starta bildspel</button>
+        <img class="bildspel" id="bild1" src="" alt=""> <img class="bildspel" id="bild2" src="" alt="">
+         <img class="bildspel" id="bild3" src="" alt=""> <img class="bildspel" id="bild4" src="" alt="">
+    </div>
+
+    <div id="test" class="grad">
+        <h1 id='menu' >Meny <img src="pil.png" alt="" class="pilmenu" /> </h1>   
+    </div>
+    <div> 
+        <ul id="myLinks" class="show">
+            <li><a href="presentation.html"> Presentationssida </a></li>
+            <li><a href="portfolio.html"> Portfolio </a></li>
+            <li><a href=""> Kontakt </a></li>
+            <li><a href=""> Om oss </a></li>
+        
+    </ul>
+    </div>
+
     <div class="presentation">
     <div >
     <H1>Portfolio:Vad har vi med oss i bagaget?</H1>
