--- a/presentation.html
+++ b/presentation.html
@@ -10,6 +10,26 @@
     <title>Document</title>
 </head>
 <body  class="grad2">
+
+    <div id="bilder">
+        <button id="nextImage">Starta bildspel</button>
+        <img class="bildspel" id="bild1" src="" alt=""> <img class="bildspel" id="bild2" src="" alt="">
+         <img class="bildspel" id="bild3" src="" alt=""> <img class="bildspel" id="bild4" src="" alt="">
+    </div>
+
+    <div id="test" class="grad">
+        <h1 id='menu' >Meny <img src="pil.png" alt="" class="pilmenu" /> </h1>   
+    </div>
+    <div> 
+        <ul id="myLinks" class="show">
+            <li><a href="presentation.html"> Presentationssida </a></li>
+            <li><a href="portfolio.html"> Portfolio </a></li>
+            <li><a href=""> Kontakt </a></li>
+            <li><a href=""> Om oss </a></li>
+        
+    </ul>
+    </div>
+
     <div class="presentation">
         <div id="namnp">
             <h1>Grupp 26</h1>
