--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <form action="/index.html" method="GET">
         <label for="namn">Ditt namn:</label> <br>
         <input type="text" id="namn" name="namn" class="inputs"> <br>
-        <label for="tele">Ditt telefonnummer:</label> <br>
+        <label for="tele">Ditt telefonnummer: (format : 07...)</label> <br>
         <input id="tele" type="tel" name="telefonnmr" class="inputs"> <br>
         <label for="email">Din email:</label> <br> 
         <input type="email" id="email" name="mail" class="inputs"> <br> 
