--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
     <div id="bilder">
         <button id="nextImage">Starta bildspel</button>
-        <img class="bildspel" id="bild1" src="" alt=""> <img class="bildspel" id="bild2" src="" alt="">
-         <img class="bildspel" id="bild3" src="" alt=""> <img class="bildspel" id="bild4" src="" alt="">
+        <img class="bildspel" id="bild1" src="" alt=""> <img class="bildspel" class= "visar" id="bild2" src="" alt="">
+         <img class="bildspel" class ="visar" id="bild3" src="" alt=""> <img class="bildspel" class= "visar" id="bild4" src="" alt="">
     </div>
 
     <div id="test" class="grad">
