--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div id="test" class="grad">
         <h1 id='menu' >Meny <img src="pil.png" alt="" class="pilmenu" /> </h1>   
     </div>
-    <div> 
+    <div id= "dataMeny"> 
         <ul id="myLinks" class="show">
             <li><a href="presentation.html"> Presentationssida </a></li>
             <li><a href="portfolio.html"> Portfolio </a></li>
