--- a/portfolio.html
+++ b/portfolio.html
@@ -4,20 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" href="style.css">
+    <script src="index.js"></script>
     <title>Portfolio</title>
 </head>
 <body  class="grad2">
     <div id="bilder">
         <button id="nextImage">Starta bildspel</button>
-        <img class="bildspel" id="bild1" src="" alt=""> <img class="bildspel" id="bild2" src="" alt="">
-         <img class="bildspel" id="bild3" src="" alt=""> <img class="bildspel" id="bild4" src="" alt="">
+        <!-- <img class="bildspel" id="bild1" src="" alt=""> <img class="bildspel" id="bild2" src="" alt="">
+         <img class="bildspel" id="bild3" src="" alt="">  -->
+         <img class="bildspel" id="bild4" src="" alt="">
     </div>
 
     <div id="test" class="grad">
         <h1 id='menu' >Meny <img src="pil.png" alt="" class="pilmenu" /> </h1>   
     </div>
-    <div> 
+    <div id="dataMeny"> 
         <ul id="myLinks" class="show">
             <li><a href="presentation.html"> Presentationssida </a></li>
             <li><a href="portfolio.html"> Portfolio </a></li>
