--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
     <script src="index.js"></script>
     <title>Portfolio</title>
 </head>
-<body  class="grad2">
+<body id="portfolio"  class="grad2">
     <div id="bilder">
         <button id="nextImage">Starta bildspel</button>
         <!-- <img class="bildspel" id="bild1" src="" alt=""> <img class="bildspel" id="bild2" src="" alt="">
@@ -35,27 +35,30 @@
     <H1>Portfolio:Vad har vi med oss i bagaget?</H1>
     <img id="bagage" src="/images/portfölj.png" alt="En tecknad man som bär på en resväska">
     </div>
+    <hr>
     <Div>
         <H2>Java projektet - Men in black</H2>
         <p>Men in black var vårat första programmeringsuppdrag. Det skrevs i Java
             med en databas som var skriven i Mysql. Men in black var en uppförsbacke
             med priset att våra programmeringskunskaper slipades på intensivt.
         </p>
-        <img src="/images/1.jpg" alt="">
+        <img src="/images/1.jpg" class="contentIMG" alt="">
     </Div>
+    <hr>
     <div>
         <h2>Interaktionsdesign - Designa en app för örebro</h2>
         <p>Interaktionskursen begav sig under våren 2021. Vårt uppdrag här
             var att grafiskt designa en app i låg, såväl hifi prototyper.
             Här fick vi studera diverse design teorier och lära oss hur en användavänlig applikation bör se ut.
         </p>
-        <img src="/images/2.webp" alt="">
+        <img src="/images/2.webp" class="contentIMG" alt="">
     </div>
+    <hr>
     <div>
         <h2>Grafiskt självlärda egenskaper</h2>
         <h4>Här presenterar vi våra egenskaper i paint :</h4>
         <br>
-        <img src="/images/3.jpg" alt=""> <img src="/images/4.jpg" alt=""> <img src="" alt="">
+        <img src="/images/3.jpg" class="contentIMG" alt=""> <img src="/images/4.jpg" class="contentIMG" alt=""> <img src="" class="contentIMG" alt="">
     </div>
 </div>
 </body>
