--- a/portfolio.html
+++ b/portfolio.html
@@ -11,22 +11,21 @@
 </head>
 <body id="portfolio"  class="grad2">
     <div id="bilder">
-        <button id="nextImage">Starta bildspel</button>
         <!-- <img class="bildspel" id="bild1" src="" alt=""> <img class="bildspel" id="bild2" src="" alt="">
          <img class="bildspel" id="bild3" src="" alt="">  -->
          <img class="bildspel" id="bild4" src="" alt="">
     </div>
 
     <div id="test" class="grad">
-        <h1 id='menu' >Meny <img src="pil.png" alt="" class="pilmenu" /> </h1>   
+        <button id="nextImage">Starta bildspel</button>
+        <h1 id='menu' >Meny <img src="pil.png" id= "pil" alt="" class="pilmenu" /> </h1>   
     </div>
-    <div id="dataMeny"> 
+    <div id= "dataMeny"> 
         <ul id="myLinks" class="show">
+            <li><a href="index.html"> Start </a></li>
             <li><a href="presentation.html"> Presentationssida </a></li>
             <li><a href="portfolio.html"> Portfolio </a></li>
-            <li><a href=""> Kontakt </a></li>
-            <li><a href=""> Om oss </a></li>
-        
+            <li><a href="#kontakt"> Kontakt </a></li>        
     </ul>
     </div>
 
