--- a/index.html
+++ b/index.html
@@ -26,9 +26,7 @@
             <li><a href="index.html"> Start </a></li>
             <li><a href="presentation.html"> Presentationssida </a></li>
             <li><a href="portfolio.html"> Portfolio </a></li>
-            <li><a href="index.html"> Kontakt </a></li>
-            <li><a href=""> Om oss </a></li>
-        
+            <li><a href="#kontakt"> Kontakt </a></li>        
     </ul>
     </div>
     <div id="text">
