--- a/presentation.html
+++ b/presentation.html
@@ -9,25 +9,24 @@
     <script src="index.js"></script>
     <title>Document</title>
 </head>
-<body  class="grad2">
+<body  id="presentation" class="grad2">
 
     <div id="bilder">
-        <button id="nextImage">Starta bildspel</button>
         <!-- <img class="bildspel" id="bild1" src="" alt=""> <img class="bildspel" id="bild2" src="" alt="">
          <img class="bildspel" id="bild3" src="" alt="">  -->
          <img class="bildspel" id="bild4" src="" alt="">
     </div>
 
     <div id="test" class="grad">
-        <h1 id='menu' >Meny <img src="pil.png" alt="" class="pilmenu" /> </h1>   
+        <button id="nextImage">Starta bildspel</button>
+        <h1 id='menu' >Meny <img src="pil.png" id= "pil" alt="" class="pilmenu" /> </h1>   
     </div>
-    <div id="dataMeny"> 
+    <div id= "dataMeny"> 
         <ul id="myLinks" class="show">
+            <li><a href="index.html"> Start </a></li>
             <li><a href="presentation.html"> Presentationssida </a></li>
             <li><a href="portfolio.html"> Portfolio </a></li>
-            <li><a href=""> Kontakt </a></li>
-            <li><a href=""> Om oss </a></li>
-        
+            <li><a href="#kontakt"> Kontakt </a></li>        
     </ul>
     </div>
 
@@ -53,7 +52,7 @@
             <p>Vi är en extremt bra grupp med massor av erfarenhet</p>
         </div>
         <div>
-            <img src="images/1.jpg" alt="">
+            <img src="images/1.jpg" id="pic" alt="">
         </div>
     </div>
    
