--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
          <img class="bildspel"  id="bild3" src="" alt="">
           <img class="bildspel"  id="bild4" src="" alt="">
     </div>
-
-    <div id="test" class="grad">
-        <button id="nextImage">Starta bildspel</button>
+    <div> <button id="nextImage">Starta bildspel</button> </div>
+    <div id="test" class="grad">        
         <h1 id='menu' >Meny <img src="pil.png" id= "pil" alt="" class="pilmenu" /> </h1>   
     </div>
     <div id= "dataMeny"> 
@@ -26,7 +25,7 @@
             <li><a href="index.html"> Start </a></li>
             <li><a href="presentation.html"> Presentationssida </a></li>
             <li><a href="portfolio.html"> Portfolio </a></li>
-            <li><a href="#kontakt"> Kontakt </a></li>        
+            <li><a href="#kontakt"> Kontakt </a></li>    
     </ul>
     </div>
     <div id="text">
