responsiva sidor och menyer

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Första sidan</title>
 </head>
-<body class="grad2">
+<body id="index" class="grad2">
 
     <div id="bilder">
         
@@ -26,7 +26,7 @@
             <li><a href="index.html"> Start </a></li>
             <li><a href="presentation.html"> Presentationssida </a></li>
             <li><a href="portfolio.html"> Portfolio </a></li>
-            <li><a href="index.html"> Kontakt </a></li>
+            <li><a href="#kontakt"> Kontakt </a></li>
             <li><a href=""> Om oss </a></li>
         
     </ul>
