--- a/Jonte.html
+++ b/Jonte.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Jontes sida</title>
 </head>
-<body class="grad2">
+<body id="jonteSida" class="grad2">
     <div id="bilder">
         <button id="nextImage">Starta bildspel</button>
         <img class="bildspel" id="bild1" src="" alt=""> <img class="bildspel" id="bild2" src="" alt="">
@@ -30,12 +30,9 @@
             <li><a href=""> Kontakt </a></li>
             <li><a href=""> Om oss </a></li>
     </div>
-
+    <div>
     <img id="jontebild" src="jonte.jpg">
-
     <p id="jtext">Hejsan svejsan lillebror! Jag gillar hockey, öl och kolla på brudar i bikini på stranden.</p>
-
-
     <div id="vdiagram" >
         
         <h3 id="tabellrubrik">Egenskaper</h3>
@@ -50,6 +47,7 @@
 
         <div id="jstapel5"> <h4 class="tabelltext" >Krydda maten</h4></div>
 
+    </div>
     </div>
 
 </body>
