--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,7 @@
             <li><a href="index.html"> Start </a></li>
             <li><a href="presentation.html"> Presentationssida </a></li>
             <li><a href="portfolio.html"> Portfolio </a></li>
-            <li><a href="#kontakt"> Kontakt </a></li>        
+            <li><a href="index.html#kontakt"> Kontakt </a></li>        
     </ul>
     </div>
 
