--- a/presentation.html
+++ b/presentation.html
@@ -12,13 +12,12 @@
 <body  id="presentation" class="grad2">
 
     <div id="bilder">
-        <!-- <img class="bildspel" id="bild1" src="" alt=""> <img class="bildspel" id="bild2" src="" alt="">
-         <img class="bildspel" id="bild3" src="" alt="">  -->
+        <img class="bildspel" id="bild1" src="" alt=""> <img class="bildspel" id="bild2" src="" alt="">
+         <img class="bildspel" id="bild3" src="" alt=""> 
          <img class="bildspel" id="bild4" src="" alt="">
     </div>
-
+    <button id="nextImage">Starta bildspel</button>
     <div id="test" class="grad">
-        <button id="nextImage">Starta bildspel</button>
         <h1 id='menu' >Meny <img src="pil.png" id= "pil" alt="" class="pilmenu" /> </h1>   
     </div>
     <div id= "dataMeny"> 
