--- a/Jonte.html
+++ b/Jonte.html
@@ -32,7 +32,7 @@
     </ul>
     </div>
     <div>
-    <img id="jontebild" src="jonte.jpg">
+    <img id="jontebild" src="jonte.jpg" alt="">
     <p id="jtext">Hejsan svejsan lillebror! Jag gillar hockey, öl och kolla på brudar i bikini på stranden.</p>
     <div id="vdiagram" >
         
