--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@
         <h4 id="meddrubrik">Skicka ett meddelande till oss</h4>
         <div id="kontakt-forms">
             <form action="/index.html" method="GET">
-                <label for="namn">Ditt namn: <p id="namnERR"></p></label> <br>
+                <label for="namn">Ditt namn:</label> <p id="namnERR"></p> <br>
                 <input type="text" id="namn" name="namn" class="inputs"> <br>
-                <label for="tele">Ditt telefonnummer: (format : 07...) <p id="teleERR"></p></label> <br>
+                <label for="tele">Ditt telefonnummer: (format : 07...) </label> <p id="teleERR"></p> <br>
                 <input id="tele" type="tel" name="telefonnmr" class="inputs"> <br>
-                <label for="email">Din email: <p id="emailERR"></p></label> <br> 
+                <label for="email">Din email:</label> <p id="emailERR"></p><br> 
                 <input type="email" id="email" name="mail" class="inputs"> <br> 
-                <label for="textfield">Ditt meddelande: <p id="textERR"></p></label> <br> 
+                <label for="textfield">Ditt meddelande:</label>  <p id="textERR"></p><br> 
                 <textarea name="textarea" id="textfield" cols="30" rows="10" class="inputs" ></textarea> 
                 <input type="submit" id="submit" name="knapp" value="Skicka"> 
             </form>
