Portfolio för mobil

--- a/portfolio.html
+++ b/portfolio.html
@@ -29,6 +29,9 @@
     </ul>
     </div>
     <img id="bagage" src="/images/portfölj.png" alt="En tecknad man som bär på en resväska">
+    <div id="infoText">
+        <h1>Vad har vi med oss i bagaget?</h1>
+    </div>
 <div id="xml">
 
 </div>
