--- a/presentation.html
+++ b/presentation.html
@@ -33,12 +33,14 @@
         <div id="namnp">
             <h1>Grupp 26</h1>
             <h4>Består av:</h4>
-            <img id="aBild" src="images/3.jpg" alt="">
             <p><a id="aLink"class= "animate" href="Amanda.html"> Amanda Mathisen </a></p>
-            <img id="vBild"src="images/2.webp" alt="">
             <p><a id="vLink" class= "animate" href="Vilma.html"> Vilma Ottner </a></p>
-            <img id='jBild' src="images/1.jpg" alt="">
             <p><a id="jLink" class= "animate" href="Jonte.html"> Jonathan fucking åmål Gabrielsson </a></p>
+        <span id="hoverPics">
+            <img id="aBild" src="images/3.jpg" alt="">
+            <img id="vBild"src="images/2.webp" alt="">
+            <img id='jBild' src="images/1.jpg" alt="">
+        </span>
         </div>
         <div>
             <h2>Vilka är vi?</h2>
