--- a/presentation.html
+++ b/presentation.html
@@ -33,9 +33,9 @@
         <div id="namnp">
             <h1>Grupp 26</h1>
             <h4>Består av:</h4>
-            <p><a id="aLink"class= "animate" href="Amanda.html"> Amanda Mathisen </a></p>
-            <p><a id="vLink" class= "animate" href="Vilma.html"> Vilma Ottner </a></p>
-            <p><a id="jLink" class= "animate" href="Jonte.html"> Jonathan fucking åmål Gabrielsson </a></p>
+            <p class= "animate"><a id="aLink" href="Amanda.html"> Amanda Mathisen </a></p>
+            <p class= "animate"><a id="vLink"  href="Vilma.html"> Vilma Ottner </a></p>
+            <p class= "animate"><a id="jLink" href="Jonte.html"> Jonathan fucking åmål Gabrielsson </a></p>
         <span id="hoverPics">
             <img id="aBild" src="images/3.jpg" alt="">
             <img id="vBild"src="images/2.webp" alt="">
