--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,7 @@
             <li><a href="index.html#kontakt"> Kontakt </a></li>        
     </ul>
     </div>
-    <img id="bagage" src="/images/portfölj.png" alt="En tecknad man som bär på en resväska">
+    <img id="bagage" src="images/portfölj.png" alt="En tecknad man som bär på en resväska">
     <div id="infoText">
         <h1>Vad har vi med oss i bagaget?</h1>
     </div>
