--- a/Vilma.html
+++ b/Vilma.html
@@ -59,21 +59,46 @@
         <div class="yttretabell">
             <div id="vstapel2" class="grad3">
                 <span class="div1">
-                    <h4>Java</h4></span>
+                    <h4 class="tabelltext"> Java</h4></span>
                 <span class="procenten">
-                    <h4 >65%</h4></span> 
+                    <h4 >65%</h4>
+                </span> 
             </div>
         </div>
 
         <div class="yttretabell">
-
-            <div id="vstapel3" class="grad3"> <h4 class="tabelltext" >Vakna tidigt</h4></div></div>
+            <div id="vstapel3" class="grad3"> 
+                <span class="div1">
+                    <h4 class="tabelltext" >Vakna tidigt</h4>
+                </span>
+                <span class="procenten">
+                    <h4>13%</h4>
+                </span>
+            </div>
+        </div>
 
         <div class="yttretabell">
-            <div id="vstapel4" class="grad3"> <h4 class="tabelltext" >Media</h4></div></div>
+            <div id="vstapel4" class="grad3">
+                <span class="div1">
+                    <h4 class="tabelltext" >Media</h4>
+                </span>
+                <span class="procenten">
+                    <h4>70%</h4>
+                </span>
+            </div>
+        </div>
 
         <div class="yttretabell">
-            <div id="vstapel5" class="grad3"> <h4 class="tabelltext" >Dricka cola zero</h4></div></div>
+            <div id="vstapel5" class="grad3">
+                <span class="div1">
+                    <h4 class="tabelltext">Dricka cola zero</h4>
+                </span>
+                <span class="procenten">
+                    <h4>98%</h4>
+                </span>
+                
+            </div>
+        </div>
 
     </div>
 
