bildspel ändat till en bild

--- a/index.html
+++ b/index.html
@@ -11,10 +11,7 @@
 <body id="index" class="grad2">
 
     <div id="bilder">
-        
-        <img class="bildspel" id="bild1" src="" alt=""> <img class="bildspel"  id="bild2" src="" alt="">
-         <img class="bildspel"  id="bild3" src="" alt="">
-          <img class="bildspel"  id="bild4" src="" alt="">
+          <img class="bildspel"  id="bild4" src="images/1.jpg" alt="">
     </div>
     <div> <button id="nextImage">Starta bildspel</button> </div>
     <div id="test" class="grad">        
