--- a/Jonte.html
+++ b/Jonte.html
@@ -11,8 +11,7 @@
 </head>
 <body id="jonteSida" class="grad2">
     <div id="bilder">
-        <img class="bildspel" id="bild1" src="" alt=""> <img class="bildspel" id="bild2" src="" alt="">
-        <img class="bildspel" id="bild3" src="" alt=""> <img class="bildspel" id="bild4" src="" alt="">
+        <img class="bildspel" id="bild4" src="images/1.jpg" alt="">
     </div>
 
     <div id="rubrik">
