--- a/Vilma.html
+++ b/Vilma.html
@@ -12,8 +12,7 @@
 
 <body  class="grad2">
     <div id="bilder">
-        <img class="bildspel" id="bild1" src="" alt=""> <img class="bildspel" id="bild2" src="" alt="">
-         <img class="bildspel" id="bild3" src="" alt=""> <img class="bildspel" id="bild4" src="" alt="">
+         <img class="bildspel" id="bild4" src="images/1.jpg" alt="">
     </div>
 
     
