--- a/portfolio.html
+++ b/portfolio.html
@@ -12,9 +12,7 @@
 </head>
 <body id="portfolio"  class="grad2">
     <div id="bilder">
-         <img class="bildspel" id="bild1" src="" alt=""> <img class="bildspel" id="bild2" src="" alt="">
-         <img class="bildspel" id="bild3" src="" alt=""> 
-         <img class="bildspel" id="bild4" src="" alt="">
+         <img class="bildspel" id="bild4" src="images/1.jpg" alt="">
     </div>
     <button id="nextImage">Starta bildspel</button>
     <div id="test" class="grad">
