--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="bilder">
           <img class="bildspel"  id="bild4" src="images/1.jpg" alt="">
     </div>
-    <div> <button id="nextImage">Starta bildspel</button> </div>
+    <span> <button id="nextImage">Starta bildspel</button> </span>
     <div id="test" class="grad">        
         <h1 id='menu' >Meny <img src="pil.png" id= "pil" alt="" class="pilmenu" /> </h1>   
     </div>
