--- a/presentation.html
+++ b/presentation.html
@@ -30,7 +30,7 @@
     <div class="presentation">
         <div id="namnp">
             <h1>Grupp 26</h1>
-            <h4>Består av:</h4>
+            <h2>Består av:</h2>
             <p class= "animate"><a id="aLink" href="Amanda.html">Amanda Mathisen</a></p>
             <p class= "animate"><a id="vLink"  href="Vilma.html">Vilma Ottner</a></p>
             <p class= "animate"><a id="jLink" href="Jonte.html">Jonathan fucking åmål Gabrielsson</a></p>
@@ -40,7 +40,7 @@
             <img id='jBild' src="images/1.jpg" alt="">
         </span>
         </div>
-        <div>
+        <div class="presentationstext">
             <h2>Vilka är vi?</h2>
             <p>Vi är ett gäng glada systemvetare som kommer från tre olika städer.
                 Jonte är från fucking åmål, Vilma från fina Örebro och Amanda från sveriges fulaste stad Borlänge.
