--- a/Vilma.html
+++ b/Vilma.html
@@ -30,6 +30,7 @@
             <li><a href="#kontakt"> Kontakt </a></li>        
     </ul>
     </div>
+    </div>
     <h1>Vilma Ottner</h1>
     <div id="vpre">
         <img  src="mv.jpg" alt="vilmas babypic" id="vilmabild">
