--- a/Amanda.html
+++ b/Amanda.html
@@ -11,7 +11,7 @@
 </head>
 <body  class="grad2">
     <div id="bilder">
-         <img class="bildspel" id="bild4" src="images/1.jpg" alt="">
+         <img class="bildspel" id="bild4" src="jonte.jpg" alt="">
     </div>
 
     <div id="rubrik">
