--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body id="index" class="grad2">
 
     <div id="bilder">
-          <img class="bildspel"  id="bild4" src="images/1.jpg" alt="">
+          <img class="bildspel"  id="bild4" src="jonte.jpg" alt="">
     </div>
     <span> <button id="nextImage">Starta bildspel</button> </span>
     <div id="test" class="grad">        
