--- a/Amanda.html
+++ b/Amanda.html
@@ -34,7 +34,7 @@
     <H1 id="vnamn">Amanda Mathisen</H1>
 
     <div>
-        <img id="amanda" src="amanda.jpg" alt="">
+        <img id="amanda" src="images/abild2.jpg" alt="">
         <p id="atext">Hej jag heter Amanda </p>
     
     <div id="vdiagram" >
