--- a/Amanda.html
+++ b/Amanda.html
@@ -10,15 +10,15 @@
     <title>Amandas sida</title>
 </head>
 <body  class="grad2">
-    <div id="bilder">
+    <!-- <div id="bilder">
          <img class="bildspel" id="bild4" src="jonte.jpg" alt="">
-    </div>
+    </div> -->
 
     <div id="rubrik">
         <div id="vmenu" class="grad"></div>
         
     </div>
-    <button id="nextImage">Starta bildspel</button>
+    <!-- <button id="nextImage">Starta bildspel</button> -->
     <div id="test" class="grad">
         <h1 id='menu' >Meny <img src="pil.png" id= "pil" alt="" class="pilmenu" /> </h1>   
     </div>
