--- a/Jonte.html
+++ b/Jonte.html
@@ -10,14 +10,13 @@
     <title>Jontes sida</title>
 </head>
 <body id="jonteSida" class="grad2">
-    <div id="bilder">
+    <!-- <div id="bilder">
         <img class="bildspel" id="bild4" src="images/1.jpg" alt="">
-    </div>
+    </div> -->
 
     <div id="rubrik">
         <div id="vmenu" class="grad"></div>
     </div>
-    <button id="nextImage">Starta bildspel</button>
     <div id="test" class="grad">
         <h1 id='menu' >Meny <img src="pil.png" id= "pil" alt="" class="pilmenu" /> </h1>   
     </div>
