--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 </head>
 <body id="index" class="grad2">
 
-    <div id="bilder">
+    <!-- <div id="bilder">
           <img class="bildspel"  id="bild4" src="jonte.jpg" alt="">
     </div>
-    <span> <button id="nextImage">Starta bildspel</button> </span>
+    <span> <button id="nextImage">Starta bildspel</button> </span> -->
     <div id="test" class="grad">        
         <h1 id='menu' >Meny <img src="pil.png" id= "pil" alt="" class="pilmenu" /> </h1>   
     </div>
