--- a/portfolio.html
+++ b/portfolio.html
@@ -11,10 +11,10 @@
     <title>Portfolio</title>
 </head>
 <body id="portfolio"  class="grad2">
-    <div id="bilder">
+    <!-- <div id="bilder">
          <img class="bildspel" id="bild4" src="images/1.jpg" alt="">
     </div>
-    <button id="nextImage">Starta bildspel</button>
+    <button id="nextImage">Starta bildspel</button> -->
     <div id="test" class="grad">
         <h1 id='menu' >Meny <img src="pil.png" id= "pil" alt="" class="pilmenu" /> </h1>   
     </div>
