--- a/Vilma.html
+++ b/Vilma.html
@@ -11,12 +11,12 @@
 </head>
 
 <body  class="grad2">
-    <div id="bilder">
+    <!-- <div id="bilder">
          <img class="bildspel" id="bild4" src="images/1.jpg" alt="">
-    </div>
+    </div> -->
 
     
-    <button id="nextImage">Starta bildspel</button>
+    <!-- <button id="nextImage">Starta bildspel</button> -->
     <div id="test" class="grad">
         <h1 id='menu' >Meny <img src="pil.png" id= "pil" alt="" class="pilmenu" /> </h1>   
     </div>
