--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
     <title>Första sidan</title>
 </head>
 <body id="index" class="grad2">
-
-    <!-- <div id="bilder">
-          <img class="bildspel"  id="bild4" src="jonte.jpg" alt="">
+    <div id="header" class="header">
+        <p id="headertext">Grupp 26</p>
     </div>
-    <span> <button id="nextImage">Starta bildspel</button> </span> -->
+    
     <div id="test" class="grad">        
         <h1 id='menu' >Meny <img src="pil.png" id= "pil" alt="" class="pilmenu" /> </h1>   
     </div>
