--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
 <body id="index" class="grad2">
     <div id="header" class="header">
         <p id="headertext">Grupp 26</p>
-    </div>
-    
+
     <div id="test" class="grad">        
         <h1 id='menu' >Meny <img src="pil.png" id= "pil" alt="" class="pilmenu" /> </h1>   
     </div>
     <div id= "dataMeny"> 
         <ul id="myLinks" class="show">
-            <li><a href="index.html"> Start </a></li>
-            <li><a href="presentation.html"> Presentationssida </a></li>
-            <li><a href="portfolio.html"> Portfolio </a></li>
-            <li><a href="#kontakt"> Kontakt </a></li>    
+            <li class="listlink"><a href="index.html" class="link"> Start </a></li>
+            <li class="listlink"><a href="presentation.html" class="link"> Presentationssida </a></li>
+            <li class="listlink"><a href="portfolio.html" class="link"> Portfolio </a></li>
+            <li class="listlink"><a href="#kontakt" class="link"> Kontakt </a></li>    
     </ul>
     </div>
+ </div>
     <div id="text">
         <h2>VÄLKOMMEN HIT</h2>
         <h3>Välkommen till vår hemsida, här kan ni läsa allt om vårt projekt</h3>
