--- a/Jonte.html
+++ b/Jonte.html
@@ -31,7 +31,7 @@
     </div>
     <div>
     <img id="jontebild" src="jonte.jpg" alt="">
-    <p id="jtext">Hejsan svejsan lillebror! Jag gillar hockey, öl och kolla på brudar i bikini på stranden.</p>
+    <p id="jtext">Hejsan svejsan lillebror! Jag gillar hockey, öl och kolla på brudar i bikini på stranden. Jag kommer från fucking åmål, där pratar vi könstigt! hoppas ni förstår vad jag säger, jag vet att det är svårt!!</p>
     
         <div id="vdiagram" >
         
