--- a/Amanda.html
+++ b/Amanda.html
@@ -20,21 +20,21 @@
     </div>
     <!-- <button id="nextImage">Starta bildspel</button> -->
     <div id="test" class="grad">
-        <h1 id='menu' >Meny <img src="pil.png" id= "pil" alt="" class="pilmenu" /> </h1>   
+        <h1 id='menu' >Meny <img src="pil.png" id= "pil" alt="En bild som visar en pil neråt" class="pilmenu" /> </h1>   
     </div>
     <div id= "dataMeny"> 
         <ul id="myLinks" class="show">
             <li><a href="index.html"> Start </a></li>
             <li><a href="presentation.html"> Presentationssida </a></li>
             <li><a href="portfolio.html"> Portfolio </a></li>
-            <li><a href="#kontakt"> Kontakt </a></li>        
+            <li><a href="index.html#kontakt"> Kontakt </a></li>        
     </ul>
     </div>
 
     <H1 id="vnamn">Amanda Mathisen</H1>
 
     <div class="vpre">
-        <img id="amanda" src="images/amanda.jpg" alt="">
+        <img id="amanda" src="images/amanda.jpg" alt="En bild på Amanda">
         <p id="atext">Hej jag heter Amanda</p>
     </div>
     
