--- a/Jonte.html
+++ b/Jonte.html
@@ -18,7 +18,7 @@
         <div id="vmenu" class="grad"></div>
     </div>
     <div id="test" class="grad">
-        <h1 id='menu' >Meny <img src="pil.png" id= "pil" alt="" class="pilmenu" /> </h1>   
+        <h1 id='menu' >Meny <img src="pil.png" id= "pil" alt="En bild på en pil som pekar neråt" class="pilmenu" /> </h1>   
     </div>
 
     <div id= "dataMeny"> 
@@ -26,11 +26,11 @@
             <li><a href="index.html"> Start </a></li>
             <li><a href="presentation.html"> Presentationssida </a></li>
             <li><a href="portfolio.html"> Portfolio </a></li>
-            <li><a href="#kontakt"> Kontakt </a></li>        
+            <li><a href="index.html#kontakt"> Kontakt </a></li>        
     </ul>
     </div>
     <div>
-    <img id="jontebild" src="jonte.jpg" alt="">
+    <img id="jontebild" src="jonte.jpg" alt="En bild på Jonathan">
     <p id="jtext">Hejsan svejsan lillebror! Jag gillar hockey, öl och kolla på brudar i bikini på stranden. Jag kommer från fucking åmål, där pratar vi könstigt! hoppas ni förstår vad jag säger, jag vet att det är svårt!!</p>
     
         <div id="vdiagram" >
