--- a/Vilma.html
+++ b/Vilma.html
@@ -18,7 +18,7 @@
     
     <!-- <button id="nextImage">Starta bildspel</button> -->
     <div id="test" class="grad">
-        <h1 id='menu' >Meny <img src="pil.png" id= "pil" alt="" class="pilmenu" /> </h1>   
+        <h1 id='menu' >Meny <img src="pil.png" id= "pil" alt="En bild på en pil som pekar neråt" class="pilmenu" /> </h1>   
     </div>
     <div id="myLinks" class="show" > 
         <ul class="menylista">
@@ -27,7 +27,7 @@
             <li><a href="index.html"> Start </a></li>
             <li><a href="presentation.html"> Presentationssida </a></li>
             <li><a href="portfolio.html"> Portfolio </a></li>
-            <li><a href="#kontakt"> Kontakt </a></li>        
+            <li><a href="index.html#kontakt"> Kontakt </a></li>        
     </ul>
     </div>
     </div>
