--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <p id="headertext">Grupp 26</p>
 
     <div id="test" class="grad">        
-        <h1 id='menu' >Meny <img src="pil.png" id= "pil" alt="" class="pilmenu" /> </h1>   
+        <h1 id='menu' >Meny <img src="pil.png" id= "pil" alt="En bild som visar en pil neråt" class="pilmenu" /> </h1>   
     </div>
     <div id= "dataMeny"> 
         <ul id="myLinks" class="show">
