--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
     </div>
     <button id="nextImage">Starta bildspel</button> -->
     <div id="test" class="grad">
-        <h1 id='menu' >Meny <img src="pil.png" id= "pil" alt="" class="pilmenu" /> </h1>   
+        <h1 id='menu' >Meny <img src="pil.png" id= "pil" alt="En bild på en pil som pekar neråt" class="pilmenu" /> </h1>   
     </div>
     <div id= "dataMeny"> 
         <ul id="myLinks" class="show">
