--- a/presentation.html
+++ b/presentation.html
@@ -12,14 +12,14 @@
 <body  id="presentation" class="grad2">
 
    
-        <h1 id='menu' >Meny <img src="pil.png" id= "pil" alt="" class="pilmenu" /> </h1>   
+        <h1 id='menu' >Meny <img src="pil.png" id= "pil" alt="En bild på en pil som pekar neråt" class="pilmenu" /> </h1>   
     </div>
     <div id= "dataMeny"> 
         <ul id="myLinks" class="show">
             <li><a href="index.html"> Start </a></li>
             <li><a href="presentation.html"> Presentationssida </a></li>
             <li><a href="portfolio.html"> Portfolio </a></li>
-            <li><a href="#kontakt"> Kontakt </a></li>        
+            <li><a href="index.html#kontakt"> Kontakt </a></li>        
     </ul>
     </div>
 
@@ -27,7 +27,7 @@
         <div id="namnp">
             <h1>Grupp 26</h1>
             <div id="bilder">
-                <img class="bildspel" id="bild4" src="images/1.jpg" alt="">
+                <img class="bildspel" id="bild4" src="images/1.jpg" alt="Bildspels bilder, ändras med en animering på intervall">
            </div>
            <button id="nextImage">Starta bildspel</button>
             <h2>Består av:</h2>
