--- a/index.html
+++ b/index.html
@@ -9,21 +9,22 @@
     <title>Första sidan</title>
 </head>
 <body id="index" class="grad2">
-    <div id="header" class="header">
-        <p id="headertext">Grupp 26</p>
-
-    <div id="test" class="grad">        
-        <h1 id='menu' >Meny <img src="pil.png" id= "pil" alt="" class="pilmenu" /> </h1>   
-    </div>
-    <div id= "dataMeny"> 
-        <ul id="myLinks" class="show">
-            <li class="listlink"><a href="index.html" class="link"> Start </a></li>
-            <li class="listlink"><a href="presentation.html" class="link"> Presentationssida </a></li>
-            <li class="listlink"><a href="portfolio.html" class="link"> Portfolio </a></li>
-            <li class="listlink"><a href="#kontakt" class="link"> Kontakt </a></li>    
-    </ul>
-    </div>
- </div>
+    <div id="menyStor">
+        <div id="header" class="header">
+            <p id="headertext">Grupp 26</p>
+        </div>
+    
+        <div id="test" class="grad">        
+            <h1 id='menu' >Meny <img src="pil.png" id= "pil" alt="" class="pilmenu" /> </h1>   
+        </div>
+        <div id= "dataMeny"> 
+            <ul id="myLinks" class="show">
+                <li class="listlink"><a href="index.html" class="link"> Start </a></li>
+                <li class="listlink"><a href="presentation.html" class="link"> Presentationssida </a></li>
+                <li class="listlink"><a href="portfolio.html" class="link"> Portfolio </a></li>
+                <li class="listlink"><a href="#kontakt" class="link"> Kontakt </a></li>    
+        </ul>
+        </div>   
     <div id="text">
         <h2>VÄLKOMMEN HIT</h2>
         <h3>Välkommen till vår hemsida, här kan ni läsa allt om vårt projekt</h3>
