--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
         <h1 id='menu' >Meny <img src="pil.png" id= "pil" alt="En bild på en pil som pekar neråt" class="pilmenu" /> </h1>   
     </div>
     <div id= "dataMeny"> 
-        <ul id="myLinks" class="show">
+        <ul id="myLinks" class="show" class="grad1">
             <li><a href="index.html"> Start </a></li>
             <li><a href="presentation.html"> Presentationssida </a></li>
             <li><a href="portfolio.html"> Portfolio </a></li>
